--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,4 @@ proc-macro = true
 syn = "1.0"
 quote = "1.0"
 proc-macro2 = "1.0"
-pest = "2.1"
-pest_derive = "2.1"
+guid = { git = "https://github.com/sanfusu/guid" }
